--- a/Transfer Learning.ipynb
+++ b/Transfer Learning.ipynb
@@ -271,7 +271,7 @@
    "metadata": {},
    "source": [
     "## Thanks for going through this notebook!\n",
-    "### For any further clarifications, feel free to w"
+    "### For any further clarifications, feel free to write me at gsachingoud06@gmail.com"
    ]
   }
  ],
